results/SVCOMP/conversational/log-StringBuilderChars05-2024_03_16_06_26_28.txt
public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: cannot find symbol
  //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
                          ^
  symbol:   variable buffer
  location: class StringBuilderChars05
1 error

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    //@ set buffer = \old(buffer);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: cannot find symbol
  //@ ensures \result ==> buffer.toString().equals("HiffBllTe Limited");
                          ^
  symbol:   variable buffer
  location: class StringBuilderChars05
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:7: error: cannot find symbol
    //@ set buffer = \old(buffer);
                          ^
  symbol:   variable buffer
  location: class StringBuilderChars05
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:7: error: The LHS in a set statement must be a ghost variable
    //@ set buffer = \old(buffer);
            ^
3 errors

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> \old(buffer.toString().equals("HiffBllTe Limited"));
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: cannot find symbol
  //@ ensures \result ==> \old(buffer.toString().equals("HiffBllTe Limited"));
                               ^
  symbol:   variable buffer
  location: class StringBuilderChars05
1 error

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> \old(new StringBuilder(arg).toString().equals("HiffBllTe Limited"));
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> \old(new StringBuilder(arg).toString().equals("HiffBllTe Limited"));
                               ^
1 error

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> \old(buffer.toString().equals("HiffBllTe Limited"));
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: cannot find symbol
  //@ ensures \result ==> \old(buffer.toString().equals("HiffBllTe Limited"));
                               ^
  symbol:   variable buffer
  location: class StringBuilderChars05
1 error

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> \old(new StringBuilder(arg).toString().equals("HiffBllTe Limited"));
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars05.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> \old(new StringBuilder(arg).toString().equals("HiffBllTe Limited"));
                               ^
1 error

public class StringBuilderChars05 {
  //@ requires arg != null;
  //@ requires arg.length() >= 7;
  //@ ensures \result ==> \old(arg.charAt(0) == 'H' && arg.charAt(6) == 'T');
  public static boolean f(String arg) {
    StringBuilder buffer = new StringBuilder(arg);
    buffer.setCharAt(0, 'H');
    buffer.setCharAt(6, 'T');
    return buffer.toString().equals("HiffBllTe Limited");
  }
}
